--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,6 +9,26 @@ h1, .title-text {
   color: #5b5b5b;
 }
 
+#loading {
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+  text-align: center;
+  background-color: #000;
+  z-index: 10000;
+}
+
+#loading-img {
+  margin-top: 18%;
+  height: 100px;
+  width: 100px;
+  z-index: 100;
+}
+
 #title {
   padding-top: 3%;
 }
