fix: Make loader center

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,7 +23,7 @@ h1, .title-text {
 }
 
 #loading-img {
-  margin-top: 18%;
+  margin-top: 17rem;
   height: 100px;
   width: 100px;
   z-index: 100;
