--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,7 +5,8 @@ body {
   font-family: 'PT Sans', sans-serif;
 }
 
-h1, .title-text {
+h1,
+.title-text {
   color: #5b5b5b;
 }
 
@@ -38,7 +39,7 @@ h1, .title-text {
   padding: 5rem 0;
 }
 
-#trailer {
+/* #trailer {
   height: 20px;
   width: 20px;
   background-color: #585858;
@@ -52,9 +53,32 @@ h1, .title-text {
   pointer-events: none;
   opacity: 0;
   transition: opacity 500ms ease;
+} */
+
+#trailer {
+  height: 200px;
+  width: 200px;
+  /* background: linear-gradient(to right, aquamarine, mediumpurple); */
+  background: #2F58CD;
+  border-radius: 100%;
+  filter: blur(130px);
+
+  /* for starting position */
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: -100;
+
+
+  pointer-events: none;
+  opacity: 0;
+  transition: opicity 500ms ease;
+
+  /* animation  */
+  /* animation: rotate 2s infinite; */
 }
 
-body:hover > #trailer {
+body:hover>#trailer {
   opacity: 1;
 }
 
@@ -158,7 +182,8 @@ body:hover > #trailer {
     padding: 0;
   }
 
-  .center-image, .title-text {
+  .center-image,
+  .title-text {
     text-align: center;
   }
 
@@ -205,4 +230,10 @@ body:hover > #trailer {
   to {
     opacity: 100;
   }
+}
+
+@keyframes rotate {
+  from {}
+
+  to {}
 }
