--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -171,7 +171,6 @@ nav a:hover {
     width: 12rem;
   }
 
-
   .skill-img {
     height: 4rem;
     width: 4rem;
@@ -193,7 +192,7 @@ nav a:hover {
   }
 
   .heading {
-    padding: 0;
+    padding: 3rem;
   }
 
   .center-image,
